# easysshfs

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.txt  PRIVACY_POLICY.md  README.md  init.sh  metadata
.github/workflows/: build.yml
app/: .gitignore  CMakeLists.txt  app-release.apk  build.gradle  gradle.properties  proguard-rules.pro
app/fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
app/fastlane/metadata/android/en-US/changelogs/: 101.txt  103.txt  74.txt  76.txt  77.txt  79.txt  81.txt  83.txt  85.txt  87.txt  89.txt  93.txt  95.txt  97.txt  99.txt
app/gradle/wrapper/: gradle-wrapper.properties
app/src/: .gitignore
app/src/androidTest/java/ru/nsu/bobrofon/easysshfs/: ApplicationTest.java
app/src/androidTest/kotlin/ru/nsu/bobrofon/easysshfs/: ApplicationTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: ssh  sshfs
app/src/main/cpp/: CMakeLists.txt  stub.cpp
app/src/main/java/ru/nsu/bobrofon/easysshfs/: DeprecatedApi.kt  DrawerStatus.java  DrawerStatus.kt  EasySSHFSActivity.java  EasySSHFSActivity.kt  EasySSHFSFragment.kt  EasySSHFSService.kt  EasySSHFSViewModel.kt  InternetStateChangeReceiver.java  InternetStateChangeReceiver.kt  IpResolver.kt  NavigationDrawerFragment.java  NavigationDrawerFragment.kt  OnBootReceiver.kt  ShellBuilder.kt  VersionUpdater.java  VersionUpdater.kt
app/src/main/java/ru/nsu/bobrofon/easysshfs/log/: AppLog.kt  LogFragment.java  LogFragment.kt  LogModel.java  LogModel.kt  LogObservable.kt  LogSingleton.java  LogSingleton.kt  LogWorkerFragment.java
app/src/main/java/ru/nsu/bobrofon/easysshfs/mountpoint/: EditFragment.java
app/src/main/java/ru/nsu/bobrofon/easysshfs/mountpointList/: MountPointsList.java  MountPointsWorkerFragment.java  MountpointFragment.java
app/src/main/java/ru/nsu/bobrofon/easysshfs/mountpointList/dummy/: DummyContent.java
app/src/main/java/ru/nsu/bobrofon/easysshfs/mountpointList/mountpoint/: EditFragment.java  FileUtil.java  MountPoint.java  MountPointsArrayAdapter.java
app/src/main/java/ru/nsu/bobrofon/easysshfs/mountpoint_list/: MountPointsList.kt  MountpointFragment.kt
app/src/main/java/ru/nsu/bobrofon/easysshfs/mountpoint_list/mountpoint/: EditFragment.kt  FileUtil.kt  MountPoint.kt  MountPointObservable.kt  MountPointsArrayAdapter.kt
app/src/main/java/ru/nsu/bobrofon/easysshfs/mountpointlist/: AutoMountObservable.kt  MountPointsList.kt  MountpointFragment.kt
app/src/main/java/ru/nsu/bobrofon/easysshfs/mountpointlist/mountpoint/: EditFragment.kt  FileUtil.kt  MountPoint.kt  MountPointObservable.kt  MountPointsArrayAdapter.kt
app/src/main/java/ru/nsu/bobrofon/easysshfs/settings/: Settings.kt  SettingsFragment.kt  SettingsRepository.kt  SettingsViewModel.kt  ThemeMode.kt
app/src/main/java/su/uac/mountinfo/: MountInfoRecord.kt
app/src/main/res/layout/: activity_easy_sshfs.xml  fragment_easy_sshf.xml  fragment_edit.xml  fragment_log.xml  fragment_mountpoint_grid.xml  fragment_mountpoint_list.xml  row_layout.xml
app/src/main/res/menu/: activity_main_drawer.xml  easy_sshf.xml  edit.xml  list.xml  log.xml
app/src/main/res/navigation/: main_activity_navigation.xml
app/src/main/res/raw/: discard.xml
app/src/main/res/values/: refs.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-large/: refs.xml
app/src/main/res/xml/: data_extraction_rules.xml  full_backup_content.xml  root_preferences.xml
app/src/test/java/su/uac/mountinfo/: MountInfoRecordTest.kt
sshfs-static/: CMakeLists.txt
sshfs-static/configs/: sshfs-static-arm64-v8a.config  sshfs-static-armeabi-v7a.config  sshfs-static-armeabi.config  sshfs-static-x86.config  sshfs-static-x86_64.config
